# actix-todo

./: .gitignore  Cargo.toml  README.md  build.sh  justfile  sample.env
migrations/: 20231014013908_init.down.sql  20231014013908_init.up.sql  20231014013921_tasks.up.sql  20231014014917_status.down.sql  20231014014917_status.up.sql  20231029045042_users.down.sql  20231029045042_users.up.sql
sql/: delete_task_by_id.sql  get_all_statuses.sql  get_all_tasks.sql  get_filtered_tasks.sql  get_task_by_id.sql  get_user_by_email.sql  get_user_by_id.sql  insert_task.sql  insert_user.sql  update_task_by_id.sql
src/: assets.rs  crypt.rs  dtos.rs  errors.rs  handlers.rs  lib.rs  middlewares.rs  models.rs  routes.rs  states.rs  templates.rs  utils.rs
src/dtos/: custom_validations.rs  into_template.rs  login_form.rs  new_task.rs  new_user.rs  task.rs  task_filter.rs  update_task.rs
src/errors/: app_error.rs  response_error.rs
src/handlers/: auth.rs  root.rs  tasks.rs
src/handlers/auth/: login.rs  logout.rs  (+1 more)
src/middlewares/: flash_middleware.rs  identity_middleware.rs  session_middleware.rs
src/models/: status.rs  task.rs  users.rs
src/routes/: auth.rs  not_found.rs  root.rs  tasks.rs
src/states/: db.rs  repositories.rs
src/templates/: fields.rs  not_found.rs  root.rs  server_error.rs  tasks.rs
templates/: error.html  index.html  notfound.html
templates/auth/: login.html  signup.html
templates/layouts/: layout.html  navbar.html
templates/tasks/: detail.html  edit.html  list.html  new.html
tests/: test_create_task.rs  test_get_tasks.rs
tests/mock/: test_state.rs
(+15 files in other folders)
