[package]
name = "todoapp"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.4.0", features = [
    "cookies",
    "secure-cookies",
] }
actix-web-flash-messages = { version = "0.4.2", features = [
    "cookies",
] }
argon2 = { version = "0.5.2", features = ["std"] }
askama = { version = "0.12.1", features = [
    "with-actix-web",
    "serde",
    "serde_json",
] }
askama_actix = { version = "0.14.0", features = [
    "config",
    "humansize",
    "serde-json",
    "urlencode",
] }
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = [
    "serde",
] }
clap = { version = "4.4.7", features = ["derive"] }
derive_more = { version = "1.0.0-beta.3", features = [
    "std",
    "error",
    "display",
    "from",
    "from_str",
] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.10.0"
error-stack = "0.4.1"
log = { version = "0.4.20", features = [
    "serde",
] }
serde = { version = "1.0.189", features = [
    "derive",
] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = [
    "postgres",
    "chrono",
    "uuid",
    "runtime-tokio",
] }
typed-builder = "0.16.2"
url = { version = "2.4.1", features = [
    "serde",
] }
uuid = { version = "1.4.1", features = [
    "serde",
    "v4",
    "fast-rng",
] }
validify = "1.0.12"

[dev-dependencies]
assertables = "7.0.1"
